--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         name="play-state"
         id="play"
       >
-      <span>Start</span>
+      <span>Play</span>
     </label>
 
     <label>
