--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
 <body>
 
   <main>
-    <label>
-      <input
-        type="radio"
-        name="play-state"
-        id="play"
-      >
-      <span>Play</span>
-    </label>
+    <div id="controls">
+      <label>
+        <input
+          type="radio"
+          name="play-state"
+          id="play"
+        >
+        <span>Play</span>
+      </label>
+      <label>
+        <input
+          type="radio"
+          name="play-state"
+          id="paused"
+        >
+        <span>Pause</span>
+      </label>
+      <label>
+        <input
+          type="radio"
+          name="play-state"
+          id="reset"
+          checked
+        >
+        <span>Reset</span>
+      </label>
+    </div>
 
-    <label>
-      <input
-        type="radio"
-        name="play-state"
-        id="paused"
-      >
-      <span>Pause</span>
-    </label>
-
-    <label>
-      <input
-        type="radio"
-        name="play-state"
-        id="reset"
-        checked
-      >
-      <span>Reset</span>
-    </label>
-
-    <div></div>
+    <div id="animation"></div>
 
     <a
       class="github"
